接入图灵语义理解

--- a/xfei_asr/CMakeLists.txt
+++ b/xfei_asr/CMakeLists.txt
@@ -141,12 +141,17 @@ add_executable(iat_record src/iat_record.c src/speech_recognizer.c src/linuxrec.
 
 add_executable(iat_publish_speak src/iat_publish_speak.cpp src/speech_recognizer.c src/linuxrec.c)
 
+add_executable(tuling_arv_node src/tuling_arv.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(xfei_asr_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 
 ## Specify libraries to link a library or executable target against
+target_link_libraries(
+    tuling_arv_node   
+    ${catkin_LIBRARIES} -lcurl -ljsoncpp
+)
 target_link_libraries(
    asr_sample
    ${catkin_LIBRARIES} 
